# cookiecutter-cf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  dev-requirements.txt  mkdocs.yml  pyproject.toml
docs/: index.md  opinions.md
docs/docs/: index.md  opinions.md  using-the-template.md
docs/overrides/partials/: nav.html
docs/scripts/: configuration-table.py  generate-termynal.py
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{ cookiecutter.project_name }}/: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.project_name }}/.github/: pull_request_template.md
{{ cookiecutter.project_name }}/.github/actions/setup-python-env/: action.yml
{{ cookiecutter.project_name }}/.github/workflows/: main.yml
{{ cookiecutter.project_name }}/docs/: index.md  modules.md
{{ cookiecutter.project_name }}/src/{{ cookiecutter.module_name }}/: config.py  foo.py  utilities.py
